--- a/geofenceTracking/src/components/Profile/Profile.css
+++ b/geofenceTracking/src/components/Profile/Profile.css
@@ -1,15 +1,30 @@
 /* General styles for the profile page */
 .profile-page {
     display: flex;
+    margin-top: 50px;
     justify-content: center;
    width: 100%;
     min-height: 100vh;
  
   }
+
+
   
+  .headerOfPage_Profile {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    height: 100px;
+    position: fixed; /* Fix the header position */
+    top: 0;
+    left: 250px; /* Align the header to start after the slider */
+    right: 0;
+    background-color: white; /* Ensure the header background covers content behind it */
+    z-index: 10; /* Ensure the header is on top */
+  }
+
 
   .infoInputs {
     display: flex;
+    
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
@@ -30,7 +45,7 @@
   /* Styles for input fields */
   .registrationInput input {
      /* Change background color */
-    border: 2px solid #000000; /* Add black border */
+    border: 2px solid #00000030; /* Add black border */
     border-radius: 15px; /* Rounded corners */
     padding: 10px;
     width: 358px;
@@ -74,7 +89,7 @@
       .dropDowns label{
 
 
-        font-weight: bold;
+        font-weight: light;
         margin-right: 10px; /* Add margin to separate label from input */
         display: inline-block;
         width: 150px; /* Fixed width for labels */
@@ -119,20 +134,21 @@ margin-left: 10px;
     width: 163px;
     height: 48px;
     border-radius: 35px;
-    background: grey;
+    
   }
 
 
-  .save-btn {
+  .save-btn_Profile {
     width: 163px;
     height: 48px;
     border-radius: 35px;
-    background: grey;
+    background: #D9D9D9;
+    
   }
 
 
 
-  .save-btn .item {
+  .save-btn_Profile .item {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -164,7 +180,7 @@ margin-left: 10px;
   
   /* Styles for labels */
   .registrationInput label {
-    font-weight: bold;
+    font-weight: light;
     margin-right: 10px; /* Add margin to separate label from input */
     display: inline-block;
     width: 150px; /* Fixed width for labels */
@@ -182,9 +198,130 @@ margin-left: 10px;
 
  }
 
+ @media (max-width: 768px) {
 
+
+
+  .headerOfPage_Profile {
+    left: 0; /* Reset left alignment for small screens */
+    right: 0; /* Ensure full width on small screens */
+    height: 80px; /* Adjust height for smaller screens if needed */
+    padding: 0 10px; /* Adjust padding for small screens */
+  }
+
+  .creatingProfile {
+    flex-direction: column;
+    width: 100%;
+    margin-left: 0;
+}
+
+.profile-page {
+    flex-direction: column;
+    align-items: center;
+}
+
+.infoInputs {
+    width: 100%;
+}
+
+.registrationInput {
+    gap: 20px;
+}
+
+.userChosen {
+    gap: 20px;
+}
+
+.dropDowns {
+    width: 100%;
+}
+
+.CompanyLogo {
+  order: -1;
+  flex-direction: row;
+    width: 100%;
+    margin-left: 0;
+    gap: 5px;
+    align-items: center;
+}
+
+.upload-btn, .save-btn_Profile {
+    width: 200px;
+    height: 50px;
+    border-radius: 50px;
+    padding: 2px;
+    font-size: 10px;
+}
+
+
+.upload-btn .item img {
+
+display: none;
+
+
+
+}
+
+.profileLogo {
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.endOfAccount {
+    margin-top: 20px;
+}
+}
  
 
   /* Styles for dropdown button */
   
+ 
+  .topHeader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 100px;
+    width: 100%;
+    padding: 0 20px;
+    padding-top: 10px; /* Add padding for content inside the header */
+  }
+  
+  .titleOfHeader_Profile {
+    display: flex;
+    margin-right: auto;
+    margin-left: 48px;
+   justify-content: center;
+   align-items: center;
+  
+  }
+  
+  .titleOfHeader_Profile p {
+    font-size: 35px;
+  }
+  
+  .search-box input {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    width: 100%;
+  }
+  
+  .theColorSelection {
+    padding: 2px;
+    border-radius: 45px;
+    background: grey;
+    width: 54px;
+    height: 52px;
+  }
+  
+  .profilePicCircle {
+    padding: 2px;
+    border-radius: 45px;
+    background: grey;
+    width: 54px;
+    height: 52px;
+  }
   
