--- a/geofenceTracking/src/components/Shifts/Shifts.css
+++ b/geofenceTracking/src/components/Shifts/Shifts.css
@@ -1,6 +1,54 @@
-.contentOfPage_Shifts{
+.page_Shifts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    min-height: 100vh;
+    margin-left: 250px;
+    width: calc(100% - 110px);
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+  }
 
-margin-top :25%;
+
+.contentOfPage_Shifts{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3px;
+    justify-content: flex-start;
+    width: 100%;
+margin-top :5%;
 
     
+}
+
+
+
+
+.ZonesTable_Shifts{
+
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    min-height: 50vh;
+    width: calc(100% - 100px);
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+
+}
+
+
+.zoneTitle_Shifts{
+
+
+margin-bottom: 10%;
+
+}
+
+
+.zoneTitle_Shifts{
+
+font-size: 45px;
+
 }
