--- a/geofenceTracking/src/components/Users/Users.css
+++ b/geofenceTracking/src/components/Users/Users.css
@@ -1,11 +1,81 @@
 .UsersCreation{
 
 
-margin-top: 25%;
+margin-top: 15%;
 display: flex;
 flex-direction: row;
 align-items: center;
-
+gap: 50px;
+margin-left: 50px;
 
 }
+
+.registrationInput_Users {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%;
+    gap: 50px;
+  }
+  
+  /* Styles for input fields */
+  .registrationInput_Users input {
+     /* Change background color */
+    border: 2px solid #00000030; /* Add black border */
+    border-radius: 15px; /* Rounded corners */
+    padding: 10px;
+    width: 358px;
+    box-sizing: border-box;
+  }
+
+
+
+
+
+
+.registrationInput_Users{
+
+display: flex;
+
+flex-direction: column;
+gap: 10px;
+
+}
+
+
+.registrationInput_Users label{
+
+margin-right: auto;
+margin-left: 5px;
+
+}
+
+
+.save-btn_Users {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 163px;
+    height: 48px;
+    border-radius: 35px;
+ 
+    margin-bottom: 50px;
+    /* Fix the button position */
+     /* Adjust this value to place the button where you want */
+   margin-left: auto;
+   margin-right: 150px;
+   /* Ensure the button starts directly after the slider */
+  }
+
+
+  .save-btn_Users .item {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    padding: 15px;
+    font-size: 11px;
+  }
+
 
