--- a/geofenceTracking/src/assets/Comps/Content/Content.css
+++ b/geofenceTracking/src/assets/Comps/Content/Content.css
@@ -33,7 +33,7 @@
   .notify {
     display: flex;
     align-items: center;
-    gap: 10px; /* Adjust the gap as needed */
+    gap: 10px; 
   }
   
   .notification-icon {
