--- a/geofenceTracking/src/assets/Comps/Slider/Slider.css
+++ b/geofenceTracking/src/assets/Comps/Slider/Slider.css
@@ -3,14 +3,14 @@
   flex-direction: column;
   gap: 2.3rem;
   height: 100vh;
-  width: 250px; /* Set a fixed width */
-  position: fixed; /* Fix the slider on the left */
+  width: 250px; 
+  position: fixed; 
   top: 0;
   left: 0;
-  border-radius: 20px; /* Rounded corners */
-  background-color: white; /* Background color of the slider */
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0); /* Optional shadow for better visibility */
-  z-index: 50; /* Make sure it's above other elements */
+  border-radius: 20px; 
+  background-color: white; 
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0); 
+  z-index: 50; 
 }
 
 .logo {
@@ -31,8 +31,8 @@
   flex-direction: column;
   gap: 20px;
   padding: 20px;
-  flex-grow: 1; /* Allow the menu-list to grow and take up remaining space */
-  overflow-y: auto; /* Add scrolling if content exceeds the height */
+  flex-grow: 1; 
+  overflow-y: auto; 
 }
 
 .menu-list .item {
@@ -47,9 +47,9 @@
 
 @media (min-width: 1024px) {
   .menu {
-    height: 100vh; /* Ensure full height on larger screens */
-    width: 250px; /* Maintain fixed width */
-    position: fixed; /* Keep fixed positioning */
+    height: 100vh; 
+    width: 250px; 
+    position: fixed; 
     top: 0;
     left: 0;
   }
