--- a/geofenceTracking/src/components/Employees/Employess.css
+++ b/geofenceTracking/src/components/Employees/Employess.css
@@ -1,44 +1,182 @@
-.beg_page{
-margin-top: 100px;
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-gap: 15%;
+
+
+.page_emp{
+
+width:calc(100%-250px);
+margin-left: 250px;
+
+top: 0;
+   
+  
+height: 100vh;
+
+z-index: 1000; 
+
+
+
+
+
 }
 
 
+.page-content {
+  margin-left: calc(100%-250px); 
+  padding-top: 100px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+@media (max-width: 1024px) {
+  .page-content {
+    margin-left: 0; 
+  }
+}
+
+.page-content{
+
+margin-left: 0;
+
+}
+
+.beg_page {
+  margin-left: 50px;
+
+  margin-right: 25px;
+  margin-top: 2px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap :10px;
+
+}
+
 .save-btn_Emps {
-    width: 163px;
-    height: 48px;
-    border-radius: 35px;
-    margin-bottom: 100px;
-   
+  width: 163px;
+  height: 48px;
+  border-radius: 35px;
+  margin-bottom: 100px;
+}
+
+.EmpActionsBtns, .BulkActions {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+}
+
+.BulkActions {
+  margin-right: auto;
+  
+  
+}
+
+.EmpActionsBtns {
+  margin-left: auto;
+}
+
+
+@media (max-width: 768px) {
+  .tables {
+    padding: 0 10px;
   }
 
 
 
+  .page_emp{
+
+    width:calc(100%-250px);
+    margin-left: 0;
+    
+    
+    
+    }
+
+
+    .TableWidgets{
+
+margin-bottom: 35px;
+
+
+    }
+
+
+  .max-w-7xl {
+    max-width: 100%;
+  }
+
+  .flex-col {
+    flex-direction: column;
+  }
+
+  .flex {
+    flex-direction: column;
+  }
+
+  .overflow-x-auto {
+    overflow-x: auto;
+  }
+
+  .overflow-hidden {
+    overflow: hidden;
+  }
+
+  table {
+    font-size: 0.875rem; 
+  }
+
+  .pagination {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pagination button {
+    margin-bottom: 5px;
+  }
+
+
+.beg_page{
+margin-top: 20%;
+flex-direction: column;
+gap: 5px;
+margin-left: auto;
+margin-bottom: 10px;
+}
 
   .EmpActionsBtns{
 
-    margin-top: 100px;
-    display: flex;
-    flex-direction: row;
-    margin-left: auto;
-    justify-content: center;
-    gap: 15px;
+flex-direction: column;
 
-
+gap: 5px;
+margin-left: auto;
+    
   }
 
 
   .BulkActions{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-bottom: 0px;
 
-    margin-top: 100px;
-    display: flex;
-    flex-direction: row;
-    margin-right: auto;
-    justify-content: center;
-    gap: 15px;;
+margin-left: 50x;
 
   }
+
+
+  .EmpActionsBtns{
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+  }
+  
+  
+
+  
+}
