--- a/geofenceTracking/src/components/Reports/Reports.css
+++ b/geofenceTracking/src/components/Reports/Reports.css
@@ -1,17 +1,32 @@
 
-.page {
-    min-height: 100vh;
+.page_Reports {
+ 
     margin-left: 250px;
-    width: calc(100% - 250px);
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+   
+    overflow-x: hidden; 
+position: fixed;
+
+top: 0;
+   
+  
+height: 100vh;
+
+z-index: 1000; 
+
+
+
   }
 
 .secondaryHeaderOfPage{
 
-margin-top: 100px;
+margin-top: 150px;
 display: flex;
 flex-direction: row;
+justify-content: center;
+
 gap: 50px;
+
+margin-right: 200px;
 
 
 
@@ -61,3 +76,60 @@ gap: 20px;
   }
 
 
+  .r_dropdown{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
+
+
+  }
+
+
+   .dropLabel{
+
+display: flex;
+justify-content: center;
+align-items: center;
+margin-right: 60px;
+margin-left: 0px;
+
+  }
+
+
+  @media (max-width: 768px) {
+
+
+
+    .page_Reports{
+
+margin-left: 0;
+margin-right: 0;
+
+    }
+
+    .secondaryHeaderOfPage{
+
+flex-direction: column;
+
+    }
+
+    @media (max-width: 768px) {
+      .r_dropdown {
+        flex-direction: column; 
+        align-items: flex-start; 
+      }
+      .dropLabel {
+        margin-bottom: 0.5rem; 
+        margin-right: 0; 
+      }
+    }
+
+
+
+
+
+  }
