--- a/geofenceTracking/src/components/Zones/Zones.css
+++ b/geofenceTracking/src/components/Zones/Zones.css
@@ -1,21 +1,275 @@
-.page {
-    min-height: 100vh;
-    margin-left: 250px;
-    width: calc(100% - 250px);
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-  }
+.page_zones_Mnt {
+  min-height: 100vh;
+  margin-left: 250px;
+  position: fixed;
+
+  top: 0;
+
+
+  height: 100vh;
+
+ 
+
+
+
+
+  overflow-x: hidden;
+
+}
+
+.headerOfPage {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  height: 100px;
+  position: fixed;
+
+  top: 0;
+  left: 250px;
+
+  right: 0;
+  background-color: white;
+
+  z-index: 10;
+
+}
+
+.topHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 100px;
+  width: 100%;
+  padding: 0 20px;
+  padding-top: 10px;
+
+}
+
+.titleOfHeader {
+  display: flex;
+  margin-right: auto;
+}
+
+.titleOfHeader p {
+  font-size: 50px;
+}
+
+.search-box input {
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.theColorSelection {
+  padding: 2px;
+  border-radius: 45px;
+  background: grey;
+  width: 54px;
+  height: 52px;
+}
+
+.profilePicCircle {
+  padding: 2px;
+  border-radius: 45px;
+  background: grey;
+  width: 54px;
+  height: 52px;
+}
+
+.ZonesColor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+
+}
+
+.ZonesColor label {
+  padding: 12px;
+  box-sizing: border-box;
+}
+
+.SecondaryHeader {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: row;
+
+}
+
+.searchBar {
+  margin-right: 100px;
+}
+
+.theColorSelection {
+  margin-right: auto;
+}
+
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 100px;
+}
+
+.options .item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 1.1rem;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.ZoneCardOptions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  font-size: 1.1rem;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 10px;
+  justify-content: center;
+}
+
+.ZoneTitle {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  font-size: 1.1rem;
+  text-decoration: none;
+  border-radius: 10px;
+  justify-content: center;
+  margin-right: auto;
+}
+
+.mapContainer {
+  border-radius: 25px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.Card {
+  padding: 20px;
+
+  width: 116px;
   
+  height: 57px;
+  
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.cardDescription .icon img {
+  width: 20px;
+ 
+  height: 20px;
+ 
+}
+
+.cardDescription {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+ 
+  margin-right: auto;
+  gap: 10px;
+  flex-direction: row;
+}
+
+.CardsHeader_Zones {
+  display: grid;
+  grid-template-columns: repeat(2, 3fr);
+
+  gap: 3px;
+  
+  margin-top: 5%;
+  margin-left: 0;
+  margin-right: 15px;
+  padding: 0 10px;
+  box-sizing: border-box;
+ 
+}
+
+
+
+.zoneTitle p {
+  font-size: 11px;
+}
+
+
+.notificationText {
+  display: inline; 
+}
+
+@media (max-width: 768px) {
+  .notificationText {
+    display: none;
+  }
+}
+
+.zoneOptions {
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+  justify-content: center;
+  height: 57px;
+
+}
+
+.ZoneCardOptions {
+  font-size: 0.9rem;
+  
+  padding: 5px;
+ 
+}
+
+
+.zonesCards {
+
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+
+  width: 100%;
+
+
+
+}
+
+
+@media (max-width: 768px) {
+  .page_zones_Mnt {
+    margin-left: 0; 
+    width: 100% 
+  }
+
+
   .headerOfPage {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     height: 100px;
-    position: fixed; /* Fix the header position */
+    position: fixed;
+   
     top: 0;
-    left: 250px; /* Align the header to start after the slider */
+    left: 0;
+    
     right: 0;
-    background-color: white; /* Ensure the header background covers content behind it */
-    z-index: 10; /* Ensure the header is on top */
+    background-color: white;
+    
+    z-index: 10;
+    
+
   }
-  
+
   .topHeader {
     display: flex;
     align-items: center;
@@ -24,24 +278,30 @@
     gap: 100px;
     width: 100%;
     padding: 0 20px;
-    padding-top: 10px; /* Add padding for content inside the header */
-  }
+    padding-top: 10px;
   
+  }
+
   .titleOfHeader {
     display: flex;
     margin-right: auto;
   }
-  
+
   .titleOfHeader p {
     font-size: 50px;
   }
-  
+
   .search-box input {
     padding: 8px;
     border: none;
     border-radius: 4px;
     width: 100%;
   }
+
+
+ 
+
+
   
   .theColorSelection {
     padding: 2px;
@@ -50,7 +310,7 @@
     width: 54px;
     height: 52px;
   }
-  
+
   .profilePicCircle {
     padding: 2px;
     border-radius: 45px;
@@ -58,104 +318,120 @@
     width: 54px;
     height: 52px;
   }
-  
+
   .ZonesColor {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 5px;
+
   }
-  
+
   .ZonesColor label {
     padding: 12px;
     box-sizing: border-box;
   }
-  
+
   .SecondaryHeader {
-    margin-top: 80px;
+
     display: flex;
-    flex-direction: row; /* Add top margin equal to the header height */
+    margin-right: auto;
+    gap: 2px;
+    flex-direction: row;
+    justify-content: center;
+
   }
-  
+
   .searchBar {
     margin-right: 100px;
   }
-  
+
   .theColorSelection {
     margin-right: auto;
   }
-  
+
   .options {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 100px;
+    gap: 5px;
+    margin-right: 50px;
   }
-  
+
   .options .item {
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
-    gap: 20px;
+    gap: 5px;
     font-size: 1.1rem;
     text-decoration: none;
     padding: 10px;
     border-radius: 10px;
   }
-  
+
   .ZoneCardOptions {
     display: flex;
     align-items: center;
-    gap: 10px; /* Reduce the gap if 20px is too much */
+    gap: 10px;
+ 
     font-size: 1.1rem;
     text-decoration: none;
     padding: 10px;
     border-radius: 10px;
     justify-content: center;
   }
-  
+
   .ZoneTitle {
     display: flex;
     align-items: center;
-    gap: 10px; /* Reduce the gap if 20px is too much */
+    gap: 10px;
+ 
     font-size: 1.1rem;
     text-decoration: none;
     border-radius: 10px;
     justify-content: center;
     margin-right: auto;
   }
-  
+
   .mapContainer {
     border-radius: 25px;
     overflow: hidden;
-    width: 100%;
+    width: 25%;
   }
-  
+
   .Card {
-    padding: 20px; /* Adjust as needed */
-    width: 116px; /* Increase if necessary */
-    height: 57px; /* Allow height to adjust based on content */
+    padding: 10px;
+
+    width: 100px;
+  
+    height: 50px;
+    
     border-radius: 15px;
     display: flex;
-    flex-direction: column; /* Ensure the card items stack vertically */
+    flex-direction: column;
+   
     justify-content: center;
     align-items: center;
     overflow: hidden;
   }
-  
+
   .cardDescription .icon img {
-    width: 20px; /* Adjust the size as needed */
-    height: 20px; /* Adjust the size as needed */
-  }
+    width: 20px;
+   
+    height: 20px;
   
+  }
+
   .cardDescription {
     display: flex;
     justify-content: flex-start;
-    align-items: center; /* Ensure items are centered vertically */
+    align-items: center;
+  
     margin-right: auto;
     gap: 10px;
     flex-direction: row;
   }
-  
+
   .CardsHeader {
     display: flex;
     flex-direction: row;
@@ -165,21 +441,70 @@
     margin-top: 80px;
     margin-left: 0;
   }
-  
+
   .zoneTitle p {
     font-size: 11px;
   }
-  
+
   .zoneOptions {
     display: flex;
-    flex-direction: column; /* Stack buttons vertically */
+    flex-direction: column;
+    
     align-items: center;
     justify-content: center;
-    height: 57px; /* Ensure the total height is 57px */
+    height: 57px;
+    
   }
-  
+
   .ZoneCardOptions {
-    font-size: 0.9rem; /* Reduce font size if necessary */
-    padding: 5px; /* Adjust padding as needed */
-  }
+    font-size: 0.9rem;
   
+    padding: 5px;
+    
+  }
+
+
+
+
+
+
+
+  .CardsHeader_Zones {
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    
+    gap: 2px;
+    
+    margin-top: 5%;
+    margin-left: 0;
+    margin-right: 15px;
+    padding: 0 5 px;
+    
+  }
+
+
+  .zonesCards {
+
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+flex-wrap: wrap;
+
+    width: 250px;
+
+
+
+  }
+
+
+  .ZoneCardOptions {
+    font-size: 0.9rem;
+   
+    padding: 5px;
+    margin-left: auto;
+ 
+  }
+
+
+
+}
